...
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonGoToSteps"
        android:layout_width="151dp"
        android:layout_height="64dp"
        android:layout_marginBottom="91dp"
        android:text="@string/logIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
