<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/text_message"
        android:background="#ECEFF1"
        android:fillViewport="true"
        android:overScrollMode="always">

        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_chat_screen"
            android:padding="10dp"
            android:scrollbars="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_send"
        android:layout_margin="5dp"
        android:hint="@string/send_a_message" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:text="@string/send" />

</RelativeLayout>