<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/friend"
            android:textSize="25sp"
            android:id="@+id/friendName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_email"
            android:id="@+id/friendEmail"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/sendMsg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/send_a_message" />
            <Button
                android:id="@+id/btnSendMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"/>
        </LinearLayout>
        <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/monthChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>